objects/CasePrepopulateFieldIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of fields that auto-populate on a Case when it is created from the Opportunity Playbook</description>
    <fields>
        <fullName>Case_Field_API_Name__c</fullName>
        <label>Case Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a field belongs to all cases in general (generic) or belongs to only cases with specific/excluded record types (specific)</description>
        <label>Generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Field_API_Name__c</fullName>
        <label>Opportunity Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CasePrepopulateFieldIds</label>
</CustomObject>